--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+width: 800px;
+width: 90%;
+max-width: 800px;
+
+
   .indent {
     margin-left: 50px; /* default for desktop */
   }
@@ -20,16 +25,54 @@ html {
 }
 
 body {
+  padding: 20px;
   font-family: 'Segoe UI', sans-serif;
   background-color: #0d0d0d;
   color: white;
   line-height: 1.6;
 }
 
+@media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
+{
+  font-size: 16px; /* Desktop */
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 14px; /* Mobile */
+  }
+}
+
+.container {
+  width: 90%;
+  max-width: 800px;
+  margin: auto;
+}
+
+button {
+  max-width: 100%;
+  word-wrap: break-word;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
+
 
 nav {
   background-color: #000;
